fix tabs on ios

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -205,7 +205,7 @@
       margin-left: 40px
 
   .nav-tabs > li > a
-    font-size: 13px
+    font-size: 9px
 
 
 /* Everything but portrait iphone*/
